--- a/query-car/app/views/proyecto/index.html.erb
+++ b/query-car/app/views/proyecto/index.html.erb
@@ -2,4 +2,6 @@
 <p>Este es un mensaje</p>
 <p>Hola muchachos</p>
 <p>Hola soy kike</p>
-<p>veamos si haciendo commit, se visualiza en github</p>
+<p>veamos si haciendo commit, se visualiza</p>
+<p>Genteeee</p>
+<p>Genteeee gabo se pone el chifa CON GASEOSA</p>
